[12.28]로지스틱 회귀분석 수업

--- a/1-회귀분석/test.ipynb
+++ b/1-회귀분석/test.ipynb
@@ -527,7 +527,7 @@
     "### CRIM : 지역별 범죄 발생률\n",
     "### ZN : 25,000평방피트를 초과하는 거주 비율\n",
     "### INDUS : 비상업 지역의 넓이의 비율\n",
-    "### CHAS : 찰스가의 더미 변수 (1은 강의 경계, 0은 경계아님)\n",
+    "### CHAS : 찰스강의 더미 변수 (1은 강의 경계, 0은 경계아님)\n",
     "### NOX : 일산화질소 농도\n",
     "### RM : 거주할수 있는 방 갯수 \n",
     "### AGE : 1940년도 이전에 건축된 주택 비율 \n",
