--- a/2-로지스틱회귀분석/test.ipynb
+++ b/2-로지스틱회귀분석/test.ipynb
@@ -553,6 +553,239 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 사이킷런에서 제공하는 모델을 불러와서 학습 -> 학습된 모델을 이용해서 예측값 출력 -> 실제값과 비교분석\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "Y = b_cancer_df[\"diagnosis\"]\n",
+    "# 정규화가 된 샘플 데이터\n",
+    "X = b_cancer_scaled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 훈련용, 평가영 데이터 분리하기 7:3\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X,Y,test_size=0.3, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train : (398, 30), X_test : (171, 30), Y_train : (398,), Y_test : (171,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"X_train : {X_train.shape}, X_test : {X_test.shape}, Y_train : {Y_train.shape}, Y_test : {Y_test.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 모델 생성\n",
+    "lr_b_cancer = LogisticRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 해당 모델 학습 시키기\n",
+    "lr_b_cancer.fit(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 학습이 된 모델을 이용해서 예측값 출력해 보기 -> 평가해보기\n",
+    "y_predict = lr_b_cancer.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mse : 0.023391812865497075, rmse : 0.1529438225803745, r2_value : 0.8994708994708995\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 평가분석 지표\n",
+    "# MSE : 오류 제곱 평균\n",
+    "# R^2 Score : 예측값 / 실제값 나눈비율\n",
+    "# Y_test : 답지, y_predict : mk가 학습해서 시험친 결과\n",
+    "\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "mse = mean_squared_error(Y_test, y_predict)\n",
+    "# 4 -> 루트4 -> 2 : 값을 통일 시켰다. 나중에 스케일링을 많이 함, 정규화등으로 고쳐야 통계시 효율적으로 작업이 진행되므로 이런작업을 많이 함\n",
+    "rmse = np.sqrt(mse)\n",
+    "r2_value = r2_score(Y_test, y_predict)\n",
+    "\n",
+    "print(f\"mse : {mse}, rmse : {rmse}, r2_value : {r2_value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 오차행렬을 이용해서 분석의 비교 지표값을 정밀도, 재현율, F1 스코어, ROC의 AUC스코어 등을 이용해서\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score, roc_auc_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 60,   3],\n",
+       "       [  1, 107]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 오차행렬 만들기 : 행(실제값 : Y_test), 열(예측값 : y_predict)\n",
+    "# 열(예측값 : y_predict), Negative, Positive\n",
+    "# 행(실제값 : Y_test) Ne, TN, FP\n",
+    "# 행(실제값 : Y_test) Po, FN, TP\n",
+    "confusion_matrix(Y_test, y_predict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 정확도 : 바르게 예측하는 모든 수 (TN + TP) / 전체 데이터 수 (TN + FP + FN + TP)\n",
+    "### 정밀도 : 참인 것의 수 (TP) / 예측이 긍정인 것 (FP + TP)\n",
+    "### => Positive 예측 성능을 더 정밀하게 평가하는 지표\n",
+    "### => 사이킷런에 함수로 제공 : precision_score\n",
+    "\n",
+    "### ex) 암 환자를 진단할 때 정확도가 중요할까? 정밀도가 중요할까? -> 정밀도가 중요함 : 암인지 아닌지가 더 중요하기 때문에...\n",
+    "\n",
+    "### 재현율 : 참인 것의 수 (TN) / 실제값이 긍정인 것중에서 (FN + TP)\n",
+    "### => 실제 Positive인 데이터를 정확히 예측하는 평가 지표. 민감도라고 하고, TPR(True Positive Rate)\n",
+    "### => 사이킷런에 함수로 제공 : recall_score\n",
+    "\n",
+    "### F1스코어 : 정밀도와 재현율을 결합한 평가지표, 상충관계 문제점을 고려해서 정확한 평가에 사용이 됨\n",
+    "### F1스코어 = 2 x (정밀도 x 재현율) / (정밀도 + 재현율)\n",
+    "\n",
+    "### ROC기반 AUC 스코어\n",
+    "### ROC기반 AUC 스코어 = TPR / FPR\n",
+    "### FPR(False Positive Rate) =  거짓인 것의(FP)  / 실제값(TN + FP)\n",
+    "### ROC기반 AUC 스코어 -> 1에 가까울 수록 좋은 성능\n",
+    "### => 사이킷런에 함수로 제공 : roc_auc_score\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy의 값(정확도) : 0.9766081871345029\n",
+      "precision 값(정밀도) : 0.9727272727272728\n",
+      "recall 값(재현율) : 0.9907407407407407\n",
+      "f1 스코어 값 : 0.981651376146789\n",
+      "roc_auc 스코어 값(ROC기반 AUC스코어) : 0.9715608465608465\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 정확도\n",
+    "accuracy = accuracy_score(Y_test, y_predict)\n",
+    "print(f\"accuracy의 값(정확도) : {accuracy}\")\n",
+    "\n",
+    "# 정밀도\n",
+    "precision = precision_score(Y_test, y_predict)\n",
+    "print(f\"precision 값(정밀도) : {precision}\")\n",
+    "\n",
+    "# 재현율\n",
+    "recall = recall_score(Y_test, y_predict)\n",
+    "print(f\"recall 값(재현율) : {recall}\")\n",
+    "\n",
+    "# F1스코어\n",
+    "f1 = f1_score(Y_test, y_predict)\n",
+    "print(f\"f1 스코어 값 : {f1}\")\n",
+    "\n",
+    "# ROC기반 AUC스코어\n",
+    "roc_auc = roc_auc_score(Y_test, y_predict)\n",
+    "print(f\"roc_auc 스코어 값(ROC기반 AUC스코어) : {roc_auc}\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정확도 : 0.977, 정밀도 : 0.973, 재현율 : 0.991, f1 스코어 : 0.982, roc_auc 스코어 : 0.972\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 소숫점 3자리\n",
+    "print(\"정확도 : {0:.3f}, 정밀도 : {1:.3f}, 재현율 : {2:.3f}, f1 스코어 : {3:.3f}, roc_auc 스코어 : {4:.3f}\".format(accuracy,precision,recall,f1,roc_auc))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
